@@ -364,6 +364,7 @@ Android Studio: don't patch ApplicationInfo.xml */
       jvmArgs.addAll([
         '--add-opens=java.base/java.lang=ALL-UNNAMED',
         '--add-opens=java.base/java.text=ALL-UNNAMED',
+        '--add-opens=java.base/java.time=ALL-UNNAMED',
         '--add-opens=java.base/java.util=ALL-UNNAMED',
         '--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED',
         '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
