@@ -19,16 +19,12 @@ final class VmOptionsGenerator {
     '-Djdk.http.auth.tunneling.disabledSchemes=""',
     '-Djdk.attach.allowAttachSelf=true',
     '-Djdk.module.illegalAccess.silent=true',
-    '-Djna.nosys=true',  // Android Studio: added by Change Ie7351d92
-    '-Djna.boot.library.path=',  // Android Studio: added by Change Ie7351d92
-    '-Didea.vendor.name=Google',  // Android Studio: added by Change Ie6d690b5
-    '-XX:+IgnoreUnrecognizedVMOptions', //todo[kb] remove when we find a way to remove outdated options like -XX:+UseConcMarkSweepGC
     '-Dkotlinx.coroutines.debug=off')
 
-  static final Map<String, String> MEMORY_OPTIONS = Map.of(
-    '-Xms', '256m',  // Android Studio: modified by Change Ie7351d92
-    '-Xmx', '1280m',  // Android Studio: modified by Change Ie7351d92
-    '-XX:ReservedCodeCacheSize=', '512m')
+  static final List<Map.Entry<String, String>> MEMORY_OPTIONS = List.of(
+    Map.entry('-Xms', '128m'),
+    Map.entry('-Xmx', '750m'),
+    Map.entry('-XX:ReservedCodeCacheSize=', '512m'))
 
   static List<String> computeVmOptions(boolean isEAP, ProductProperties productProperties) {
     List<String> result = new ArrayList<>()
@@ -38,12 +34,14 @@ final class VmOptionsGenerator {
     memory.putAll(productProperties.customJvmMemoryOptions)
     memory.each { k, v -> result.add(k + v) }
 
-    if (isEAP) {
-      // must be consistent with `com.intellij.openapi.application.ConfigImportHelper#updateVMOptions`
-      result.add('-XX:MaxJavaStackTraceDepth=10000')
-    }
-
     result.addAll(COMMON_VM_OPTIONS)
+
+    if (isEAP) {
+      int place = result.indexOf('-ea')
+      if (place < 0) place = result.findIndexOf { it.startsWith('-D') }
+      if (place < 0) place = result.size()
+      result.add(place, '-XX:MaxJavaStackTraceDepth=10000')  // must be consistent with `ConfigImportHelper#updateVMOptions`
+    }
 
     return result
   }
